UIManager Class | Ty - "Never Refactor"

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
 </head>
 <body class="bg-secondary text-primary">
   <div class="bg-primary main-section">
-    <div id="list-container">
+    <div id="list-sidebar">
       <ul role="list" id="lists"></ul>
       <button id="add-list" type="button">New List</button>
       <label><input id="new-list-text" type="text" name="list"></label>
