Class UIManager & methods
- Methods for basic functionality.
- addList(), addItem(), add lists and items with ability to remove them.

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
   <div class="bg-primary main-section">
     <div id="list-sidebar">
       <ul role="list" id="lists"></ul>
-      <button id="add-list" type="button">New List</button>
+      <button id="add-list" type="button">Add List</button>
       <label><input id="new-list-text" type="text" name="list"></label>
     </div>
     <div class="items-container">
