Add List and Add Item input/button styling

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
         <ul role="list" id="lists"></ul>
       </section>
       <div class="add-lists">
-        <button id="add-list" type="button">Add List</button>
+        <button id="add-list" type="button">+</button>
         <label><input id="new-list-text" type="text" name="list" placeholder="Add List"></label>
       </div>
     </div>
@@ -22,7 +22,7 @@
         <ul role="list" id="items"></ul>
       </section>
       <div class="add-items">
-        <button id="add-item" type="button">Add Item</button>
+        <button id="add-item" type="button">+</button>
         <label><input id="new-item-text" type="text" name="item" placeholder="Add Item"></label>
       </div>
     </div>
